--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,21 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+    --main-font-family: "Inter";
+    --sub-font-family: "Press Start 2P";
+    --title-font-width: 785;
+    --text-font-width: 465;
+    --text-color: #00CC14;
+    --icon-color: #00CC14;
+    --text-color-style: #00CC14;
+    --background-color: #000;
+    --background-gradient-subcolor: #000; /*#d3d3d3*/
+    --background-gradient-maincolor:#007f0c, #004306 ; /*#e7e7e7, #1a1a1a*/
+    --like-contour-color: #00CC14;
+    --like-sparks-color:#FF0000;
+    --header-button-color-active: 0, 204, 20, 0.6;
+    --header-background-image: url(../svg/background_dark.svg);
+    --header-title-size: 49px;
+    --header-text-size: 14px;
+    --color-text-border: #000;
+}
