--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,17 +1,14 @@
-@font-face {
-    font-family: 'Inter';
-    src: url(./Inter-Variable.woff2) format('woff2');
-    font-weight: 700;
+
+  @font-face {
     font-display: swap;
+    font-family: 'Inter';
+    src:
+      local('Roboto-Flex-Variable'),
+      url('../fonts/Inter-Variable.woff2') format('woff2 supports variations'),
+          url('../fonts/Inter-Variable.woff2') format('woff2-variations');
+      font-weight: 400 785;
   }
   
-  @font-face {
-    font-family: 'Inter';
-    src: url(./Inter-Variable.woff2) format('woff2');
-    font-weight: 400;
-    font-display: swap;
-  }
-
   @font-face {
     font-family: 'Press Start 2P';
     src: url(./PressStart2P-Regular.woff) format('woff');
