--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -4,8 +4,8 @@
     font-family: 'Inter';
     src:
       local('Roboto-Flex-Variable'),
-      url('../fonts/Inter-Variable.woff2') format('woff2 supports variations'),
-          url('../fonts/Inter-Variable.woff2') format('woff2-variations');
+      url('Inter-Variable.woff2') format('woff2 supports variations'),
+          url('Inter-Variable.woff2') format('woff2-variations');
       font-weight: 400 785;
   }
   
